@startuml FleaMarket ER Diagram

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) <i>x</i>

title フリーマーケットアプリケーション ER図

table(users) {
  primary_key(id) : bigint
  name : varchar
  email : varchar
  password : varchar
  email_verified_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

table(profiles) {
  primary_key(id) : bigint
  foreign_key(user_id) : int
  imagePath : varchar
  postCode : varchar
  address : varchar
  building : varchar
  created_at : timestamp
  updated_at : timestamp
}

table(categories) {
  primary_key(id) : bigint
  name : varchar
  created_at : timestamp
  updated_at : timestamp
}

table(items) {
  primary_key(id) : bigint
  foreign_key(user_id) : int
  name : varchar
  brand : varchar
  description : varchar
  imagePath : varchar
  condition : tinyint
  price : int
  purchased : boolean
  created_at : timestamp
  updated_at : timestamp
}

table(category_item) {
  primary_key(id) : bigint
  foreign_key(category_id) : bigint
  foreign_key(item_id) : bigint
  created_at : timestamp
  updated_at : timestamp
}

table(favorites) {
  primary_key(id) : bigint
  foreign_key(item_id) : bigint
  foreign_key(user_id) : bigint
  created_at : timestamp
  updated_at : timestamp
}

table(comments) {
  primary_key(id) : bigint
  foreign_key(item_id) : bigint
  foreign_key(user_id) : bigint
  comment : varchar
  created_at : timestamp
  updated_at : timestamp
}

table(purchases) {
  primary_key(id) : bigint
  foreign_key(item_id) : bigint
  foreign_key(user_id) : bigint
  deliveryAddress : varchar
  payment : varchar
  created_at : timestamp
  updated_at : timestamp
}

table(deals) {
  primary_key(id) : bigint
  foreign_key(purchase_id) : bigint
  status : enum('pending', 'processing', 'completed')
  created_at : timestamp
  updated_at : timestamp
}

table(reviews) {
  primary_key(id) : bigint
  foreign_key(deal_id) : bigint
  foreign_key(user_id) : bigint
  rating : int
  created_at : timestamp
  updated_at : timestamp
}

table(messages) {
  primary_key(id) : bigint
  foreign_key(deal_id) : bigint
  foreign_key(to_user_id) : bigint
  foreign_key(from_user_id) : bigint
  message : varchar
  imagePath : varchar
  read : boolean
  created_at : timestamp
  updated_at : timestamp
}

' リレーションシップの定義
users ||--o{ profiles : "1対1"
users ||--o{ items : "1対多"
users ||--o{ favorites : "1対多"
users ||--o{ comments : "1対多"
users ||--o{ purchases : "1対多"
users ||--o{ reviews : "1対多"
users ||--o{ messages : "1対多 (to_user)"
users ||--o{ messages : "1対多 (from_user)"

categories ||--o{ category_item : "1対多"
items ||--o{ category_item : "1対多"
items ||--o{ favorites : "1対多"
items ||--o{ comments : "1対多"
items ||--o{ purchases : "1対多"

purchases ||--|| deals : "1対1"
deals ||--o{ reviews : "1対多"
deals ||--o{ messages : "1対多"

@enduml
